--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         <div class="box">
             <h1>Generate a <br> <span>random password</span></h1>
             <p>Never use an insecure password again</p>
-            <Button onclick="generatePassword()">Generate passwords</Button>
+            <button type="button" onclick="generatePassword()">Generate passwords</button>
             <hr>
             <div class="passwords">
-                <div id="password-1"> &nbsp;   &nbsp; &nbsp; &nbsp; &nbsp; Example &nbsp; &nbsp;  &nbsp; </div>
-            <div id="password-2">&nbsp;  &nbsp; &nbsp; &nbsp; Example &nbsp; &nbsp; &nbsp; &nbsp; </div>
+                <div id="password-1"> &nbsp; Example &nbsp; </div>
+            <div id="password-2"> &nbsp; Example &nbsp;</div>
             </div>
         </div>
     </div>
